fixed container alignment on organization overview page.

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -162,6 +162,9 @@ h6 { font-size: 12px; line-height: 12px; }
   .container {
     width: 1030px;
   }
+  .org-container {
+    width: 880px;
+  }
   #content {
     width: 1030px;
   }
